# IKuaiNetworkAuthManager

./: .dockerignore  DOCKER_DEPLOYMENT.md  Dockerfile  LICENSE  README.md  Taskfile.yaml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  supervisord.conf
account/: __init__.py  admin.py  apps.py  backends.py  models.py  tasks.py  tests.py  urls.py  views.py
account/migrations/: 0001_initial.py
config/: __init__.py  celery.py  middleware.py  settings.py  urls.py
config/settings/: __init__.py  default.py  dev.py  prod.py
docs/: ARCHITECTURE.md  IMPLEMENTATION.md  LDAP_MAPPING.md  OPENVPN_GUIDE.md  QUICKSTART.md
sync_manager/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
sync_manager/client/: ikuai.py
sync_manager/migrations/: 0001_initial.py
templates/registration/: login.html
templates/sync_manager/: openvpn_config.ovpn  openvpn_dashboard.html
