[project]
name = "network-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2,<4.3",
    "mysqlclient>=2.2.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "django-celery-beat>=2.5.0",
    "requests>=2.32.5",
    "cachetools==3.1.1",
    "pydantic==2.11.7",
    "pydantic-extra-types>=2.10.6",
    "gunicorn>=21.2.0",
    "django-encrypted-model-fields>=0.6.5",
]

[project.optional-dependencies]
ldap = [
    "django-auth-ldap>=4.6.0",
    "python-ldap>=3.4.0",
]
